updated implementation roadmap page #1479

--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -25,13 +25,7 @@ permalink: "download-and-setup.html"
           <ul>
             <li>
               <a href="/get-started/implementation-steps.html">
-                Implementation steps
-              </a>
-            </li>
-            <li>
-              <a href="/get-started/eleventy.html">
-                <span class="sr-only"> Get started with </span>
-                Eleventy
+                Implementation roadmap
               </a>
             </li>
           </ul>
