--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -26,11 +26,8 @@ permalink: "sitemap.html"
             <ul>
               <li class="m-t-sm">
                 <a href="/get-started/implementation-steps.html">
-                  Implementation steps
+                  Implementation roadmap
                 </a>
-              </li>
-              <li class="m-t-sm">
-                <a href="/get-started/eleventy.html">Eleventy</a>
               </li>
             </ul>
           </li>
