--- a/pages/sample/implementation-steps.html
+++ b/pages/sample/implementation-steps.html
@@ -209,7 +209,7 @@ permalink: "/get-started/implementation-steps.html"
         <span class="cagov-step-list-content">
           <p>
             You’re now ready to follow your organization's change management and
-            release process. You may want to preform another QA and verify that
+            release process. You may want to perform another QA and verify that
             everything works as expected in the production environment.
           </p>
         </span>
