added some more release update items

--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -41,6 +41,12 @@ permalink: "template-updates.html"
             Separating template website development from template source
             development
           </li>
+          <li>Updated bootstrap version to 5.3</li>
+          <li>
+            Optimized core JavaScript code and placed reference to it in the
+            head tag next to core css references
+          </li>
+          <li>Improved rendering of the site header in mobile view</li>
         </ul>
       </td>
     </tr>
