--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -133,7 +133,7 @@ permalink: "download-and-setup.html"
           <a
             class="btn btn-outline-primary p-x-md"
             href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-HTML">
-            Template HTML Github repo
+            HTML sample template GitHub repo
           </a>
         </div>
       </div>
