--- a/pages/sample/structure-site-navigation.html
+++ b/pages/sample/structure-site-navigation.html
@@ -609,9 +609,9 @@ permalink: "structure/site-navigation.html"
 
             <h3 class="h4">Navigation with icons markup:</h3>
             <pre><span class="text-accent-p2">&lt;div</span> <span class="text-info">class=</span><span class="text-accent7">"navigation-search"</span><span class="text-accent-p2">&gt;</span>
-      <span class="text-success">&#10100;% include "/src/_includes/navigation.njk" %&#10101;</span>
+      <span class="text-success">&lt;-- Navigation component code goes here --&gt;</span>
       <span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"head-search"</span> <span class="text-info">class=</span><span class="text-accent7">"search-container"</span><span class="text-accent-p2">&gt;</span>
-       <span class="text-success">&#10100;% include "/src/_includes/search.njk" %&#10101;</span>
+       <span class="text-success">&lt;-- Search component code goes here --&gt;</span>
       <span class="text-accent-p2">&lt;/div&gt;</span>
      <span class="text-accent-p2">&lt;/div&gt;</span>
      </pre>
@@ -619,9 +619,9 @@ permalink: "structure/site-navigation.html"
             <h3 class="h4">Full width navigation markup:</h3>
             <pre><span class="text-accent-p2">&lt;div</span> <span class="text-info">class=</span><span class="text-accent7">"navigation-search full-width-nav container"</span><span class="text-accent-p2">&gt;</span>
       <span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"head-search"</span> <span class="text-info">class=</span><span class="text-accent7">"search-container featured-search"</span><span class="text-accent-p2">&gt;</span>
-       <span class="text-success">&#10100;% include "/src/_includes/search.njk" %&#10101;</span>
+       <span class="text-success">&lt;-- Search component code goes here --&gt;</span>
       <span class="text-accent-p2">&lt;/div&gt;</span>
-      <span class="text-success">&#10100;% include "/src/_includes/navigation.njk" %&#10101;</span>
+      <span class="text-success">&lt;-- Navigation component code goes here --&gt;</span>
      <span class="text-accent-p2">&lt;/div&gt;</span>
      </pre>
           </div>
