word Grey->Gray

--- a/pages/sample/css-gradient-backgrounds.html
+++ b/pages/sample/css-gradient-backgrounds.html
@@ -211,7 +211,7 @@ permalink: "get-started/css-classes-shortcuts/gradient-backgrounds.html"
             <pre
               style="max-height: 300px;"><code><div class="container height-100 bg-grey-radialgradient"></div></code></pre>
 
-            <h4>Grey Light</h4>
+            <h4>Gray Light</h4>
             <pre
               style="max-height: 300px;"><code><div class="container height-100 bg-greylight-radialgradient"></div></code></pre>
 
