adding nocanonical for dynamic links

--- a/pages/sample/colortheme.html
+++ b/pages/sample/colortheme.html
@@ -3,6 +3,7 @@ title: Color Theme
 landing: Visual design
 layout: landing.njk
 permalink: "visual-design/color/"
+nocanonical: true
 ---
 
 <div class="container p-t-md">
