dynamic canonical on colors

--- a/pages/sample/colortheme.html
+++ b/pages/sample/colortheme.html
@@ -414,6 +414,9 @@ nocanonical: true
   link.media = "screen,print";
   document.getElementsByTagName("head")[0].appendChild(link);
 
+  // Add canonical link for SEQ
+  document.head.appendChild(Object.assign(document.createElement('link'),{href:location.href,rel:"canonical"}));
+
   // add css class "active" to active nav item
   var themeNavItem = document.querySelector("nav.side-navigation a[href*='" + queryString + "']");
   themeNavItem.classList.add("active");
