noindex on contact-us-thankyou.html

--- a/pages/contact-us-form.html
+++ b/pages/contact-us-form.html
@@ -261,7 +261,11 @@ permalink: "contact-us.html"
   class="hidden"
   data-bs-toggle="modal"
   data-bs-target="#modalResponse"></button>
-<a href="contact-us-thankyou.html" id="urlThankyou" class="hidden"></a>
+<a
+  href="contact-us-thankyou.html"
+  id="urlThankyou"
+  class="hidden"
+  rel="noindex"></a>
 
 <script>
   const serviceUrl = "https://api.template.webstandards.ca.gov/api/air-table";
