--- a/pages/sample/newsroom.html
+++ b/pages/sample/newsroom.html
@@ -176,6 +176,7 @@ permalink: "patterns/newsroom.html"
         <a
           href="/patterns/newsroom-featured-banner.html"
           class="btn btn-outline-primary mb-4"
+          rel="noindex"
           target="_blank">
           Live example in new tab
           <span class="ca-gov-icon-arrow-next" aria-hidden="true"></span>
