side-navigation-sample-level5.html noindex

--- a/pages/sample/side-navigation-sample-level4.html
+++ b/pages/sample/side-navigation-sample-level4.html
@@ -89,7 +89,9 @@ permalink: "/components/side-navigation-sample-level4.html"
               </a>
             </li>
             <li>
-              <a href="/components/side-navigation-sample-level5.html">
+              <a
+                href="/components/side-navigation-sample-level5.html"
+                rel="noindex">
                 Dessert
               </a>
             </li>
@@ -169,6 +171,7 @@ permalink: "/components/side-navigation-sample-level4.html"
       <div class="col-lg-4">
         <a
           href="/components/side-navigation-sample-level5.html"
+          rel="noindex"
           class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
           title="Planning">
           <div class="p-a">
