--- a/pages/sample/side-navigation-sample-level5.html
+++ b/pages/sample/side-navigation-sample-level5.html
@@ -73,6 +73,7 @@ permalink: "/components/side-navigation-sample-level5.html"
         <li>
           <a
             href="/components/side-navigation-sample-level5.html"
+            rel="noindex"
             class="active">
             Dessert
           </a>
