--- a/pages/sample/side-navigation-sample-level6.html
+++ b/pages/sample/side-navigation-sample-level6.html
@@ -43,6 +43,7 @@ permalink: "/components/side-navigation-sample-level6.html"
     <li>
       <a
         href="/components/side-navigation-sample-level5.html"
+        rel="noindex"
         title="Dessert landing page">
         Dessert
       </a>
@@ -58,6 +59,7 @@ permalink: "/components/side-navigation-sample-level6.html"
         <li>
           <a
             href="/components/side-navigation-sample-level5.html"
+            rel="noindex"
             class="landing back">
             Dessert
           </a>
