rel="noindex" on sample links

--- a/pages/sample/article-sample.html
+++ b/pages/sample/article-sample.html
@@ -13,13 +13,17 @@ permalink: "/patterns/article-sample.html"
       </a>
     </li>
     <li>
-      <a href="/patterns/newsroom-sample.html" title="Newsroom landing page">
+      <a
+        href="/patterns/newsroom-sample.html"
+        title="Newsroom landing page"
+        rel="noindex">
         Newsroom
       </a>
     </li>
     <li>
       <a
         href="/patterns/list-of-articles-or-content-sample.html"
+        rel="noindex"
         title="List of articles landing page">
         Press releases
       </a>
@@ -34,6 +38,7 @@ permalink: "/patterns/article-sample.html"
         <li>
           <a
             href="/patterns/list-of-articles-or-content-sample.html"
+            rel="noindex"
             class="landing back">
             Press releases
           </a>
