--- a/pages/sample/article.html
+++ b/pages/sample/article.html
@@ -66,6 +66,7 @@ permalink: "/patterns/article.html"
 
         <a
           href="/patterns/article-sample.html"
+          rel="noindex"
           class="btn btn-outline-primary mb-4"
           target="_blank">
           Live example in new tab
