--- a/pages/sample/list-of-articles-or-content-sample.html
+++ b/pages/sample/list-of-articles-or-content-sample.html
@@ -13,7 +13,10 @@ permalink: "/patterns/list-of-articles-or-content-sample.html"
       </a>
     </li>
     <li>
-      <a href="/patterns/newsroom-sample.html" title="Newsroom page">
+      <a
+        href="/patterns/newsroom-sample.html"
+        title="Newsroom page"
+        rel="noindex">
         Newsroom
       </a>
     </li>
@@ -26,7 +29,9 @@ permalink: "/patterns/list-of-articles-or-content-sample.html"
     <nav aria-label="list navigation" class="side-navigation">
       <ul>
         <li>
-          <a href="/patterns/newsroom-sample.html" class="landing">Newsroom</a>
+          <a href="/patterns/newsroom-sample.html" rel="noindex" class="landing"
+            >Newsroom</a
+          >
         </li>
         <li><a href="javascript:;" aria-disabled="true">News articles</a></li>
         <li>
