--- a/pages/sample/list-of-articles-or-content.html
+++ b/pages/sample/list-of-articles-or-content.html
@@ -85,6 +85,7 @@ permalink: "/patterns/list-of-articles-or-content.html"
 
         <a
           href="/patterns/list-of-articles-or-content-sample.html"
+          rel="noindex"
           class="btn btn-outline-primary mb-4"
           target="_blank">
           Live example in new tab
