--- a/pages/sample/newsroom-sampe.html
+++ b/pages/sample/newsroom-sampe.html
@@ -19,7 +19,9 @@ permalink: "/patterns/newsroom-sample.html"
         <li><a href="javascript:;" class="landing active">Newsroom</a></li>
         <li><a href="javascript:;" aria-disabled="true">News articles</a></li>
         <li>
-          <a href="/patterns/list-of-articles-or-content-sample.html">
+          <a
+            href="/patterns/list-of-articles-or-content-sample.html"
+            rel="noindex">
             Press releases
           </a>
         </li>
