--- a/pages/sample/newsroom.html
+++ b/pages/sample/newsroom.html
@@ -78,6 +78,7 @@ permalink: "patterns/newsroom.html"
 
         <a
           href="/patterns/newsroom-sample.html"
+          rel="noindex"
           class="btn btn-outline-primary mb-4"
           target="_blank"
           title="Featured images news live example">
