--- a/pages/sample/side-navigation-sample-level2.html
+++ b/pages/sample/side-navigation-sample-level2.html
@@ -8,13 +8,17 @@ permalink: "/components/side-navigation-sample-level2.html"
 <nav aria-label="Breadcrumb">
   <ol class="breadcrumb">
     <li>
-      <a href="/components/side-navigation-sample.html" title="Home page">
+      <a
+        href="/components/side-navigation-sample.html"
+        rel="noindex"
+        title="Home page">
         Home
       </a>
     </li>
     <li>
       <a
         href="/components/side-navigation-sample.html"
+        rel="noindex"
         title="Examples landing page">
         Type of parties
       </a>
@@ -30,6 +34,7 @@ permalink: "/components/side-navigation-sample-level2.html"
         <li>
           <a
             href="/components/side-navigation-sample.html"
+            rel="noindex"
             class="landing back">
             Types of parties
           </a>
@@ -37,6 +42,7 @@ permalink: "/components/side-navigation-sample-level2.html"
         <li>
           <a
             href="/components/side-navigation-sample-level2.html"
+            rel="noindex"
             class="active">
             Birthday
           </a>
@@ -47,7 +53,9 @@ permalink: "/components/side-navigation-sample-level2.html"
               </a>
             </li>
             <li>
-              <a href="/components/side-navigation-sample-level3.html">
+              <a
+                href="/components/side-navigation-sample-level3.html"
+                rel="noindex">
                 Planning
               </a>
             </li>
@@ -115,6 +123,7 @@ permalink: "/components/side-navigation-sample-level2.html"
       <div class="col-lg-4">
         <a
           href="/components/side-navigation-sample-level3.html"
+          rel="noindex"
           class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
           title="Planning">
           <div class="p-a">
