--- a/pages/sample/side-navigation-sample-level5.html
+++ b/pages/sample/side-navigation-sample-level5.html
@@ -8,13 +8,17 @@ permalink: "/components/side-navigation-sample-level5.html"
 <nav aria-label="Breadcrumb">
   <ol class="breadcrumb">
     <li>
-      <a href="/components/side-navigation-sample.html" title="Home page">
+      <a
+        href="/components/side-navigation-sample.html"
+        rel="noindex"
+        title="Home page">
         Home
       </a>
     </li>
     <li>
       <a
         href="/components/side-navigation-sample.html"
+        rel="noindex"
         title="Type of parties landing page">
         Type of parties
       </a>
@@ -22,6 +26,7 @@ permalink: "/components/side-navigation-sample-level5.html"
     <li>
       <a
         href="/components/side-navigation-sample-level2.html"
+        rel="noindex"
         title="Birthday party landing page">
         Birthday party
       </a>
@@ -29,6 +34,7 @@ permalink: "/components/side-navigation-sample-level5.html"
     <li>
       <a
         href="/components/side-navigation-sample-level3.html"
+        rel="noindex"
         title="Planning landing page">
         Planning
       </a>
@@ -36,6 +42,7 @@ permalink: "/components/side-navigation-sample-level5.html"
     <li>
       <a
         href="/components/side-navigation-sample-level4.html"
+        rel="noindex"
         title="Food and drinks landing page">
         Food and drinks
       </a>
@@ -51,6 +58,7 @@ permalink: "/components/side-navigation-sample-level5.html"
         <li>
           <a
             href="/components/side-navigation-sample-level4.html"
+            rel="noindex"
             class="landing back">
             Food and drinks
           </a>
@@ -79,7 +87,9 @@ permalink: "/components/side-navigation-sample-level5.html"
           </a>
           <ul>
             <li>
-              <a href="/components/side-navigation-sample-level6.html">
+              <a
+                href="/components/side-navigation-sample-level6.html"
+                rel="noindex">
                 Birthday cake
               </a>
             </li>
@@ -117,6 +127,7 @@ permalink: "/components/side-navigation-sample-level5.html"
       <div class="col-lg-4">
         <a
           href="/components/side-navigation-sample-level6.html"
+          rel="noindex"
           class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
           title="Planning"
           aria-disabled="true">
