--- a/pages/sample/side-navigation-sample.html
+++ b/pages/sample/side-navigation-sample.html
@@ -8,7 +8,10 @@ permalink: "/components/side-navigation-sample.html"
 <nav aria-label="Breadcrumb">
   <ol class="breadcrumb">
     <li>
-      <a href="/components/side-navigation-sample.html" title="Home page">
+      <a
+        href="/components/side-navigation-sample.html"
+        rel="noindex"
+        title="Home page">
         Home
       </a>
     </li>
@@ -24,7 +27,9 @@ permalink: "/components/side-navigation-sample.html"
           <a href="javascript:;" class="landing active">Types of parties</a>
         </li>
         <li>
-          <a href="/components/side-navigation-sample-level2.html">Birthday</a>
+          <a href="/components/side-navigation-sample-level2.html" rel="noindex"
+            >Birthday</a
+          >
         </li>
         <li>
           <a href="javascript:;" class="gray-200" aria-disabled="true">
@@ -63,6 +68,7 @@ permalink: "/components/side-navigation-sample.html"
       <div class="col-lg-4">
         <a
           href="/components/side-navigation-sample-level2.html"
+          rel="noindex"
           class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
           title="Birthday">
           <div class="p-a">
