--- a/pages/sample/side-navigation.html
+++ b/pages/sample/side-navigation.html
@@ -134,7 +134,10 @@ permalink: "/components/side-navigation.html"
 
 <p class="m-b-lg">
   For an example that has 6 levels, review our
-  <a href="/components/side-navigation-sample.html" target="_blank">
+  <a
+    href="/components/side-navigation-sample.html"
+    rel="noindex"
+    target="_blank">
     live example.
   </a>
 </p>
@@ -230,6 +233,7 @@ permalink: "/components/side-navigation.html"
           </div>
           <a
             href="/components/side-navigation-sample.html"
+            rel="noindex"
             class="btn btn-outline-primary mb-4"
             target="_blank">
             Live example in new tab
