updated navigation smaples #1481 and fixed logo in the news sampes #1563

--- a/pages/sample/structure-site-navigation.html
+++ b/pages/sample/structure-site-navigation.html
@@ -290,15 +290,11 @@ permalink: "structure/site-navigation.html"
           aria-labelledby="heading-include2">
           <div class="p-a-sm">
             <p>
-              This style of menu can be set by including the
-              <code>.singlelevel</code>
-              class in the
-              <code>&lt;nav&gt;</code>
-              element like this
-              <code>
-                &lt;nav id="navigation" class="main-navigation singlelevel"&gt;
-              </code>
-              .
+              The
+              <code>.first-level-link</code>
+              that contains sub-navigation does not require the
+              <code>href</code> attribute becasue the functionality of the first
+              level link in this case is to toggle the sub navigation.
             </p>
           </div>
         </div>
@@ -414,6 +410,13 @@ permalink: "structure/site-navigation.html"
           role="tabpanel"
           aria-labelledby="heading-include3">
           <div class="p-a-sm">
+            <p>
+              The
+              <code>.first-level-link</code>
+              that contains sub-navigation does not require the
+              <code>href</code> attribute becasue the functionality of the first
+              level link in this case is to toggle the sub navigation.
+            </p>
             <p>
               Inside
               <code>.sub-nav</code>
