--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -32,6 +32,15 @@ permalink: "template-updates.html"
   </thead>
   <tbody>
     <tr>
+      <td class="text-bold font-size-16">6.2.1</td>
+      <td class="font-size-16">8-24-23</td>
+      <td>
+        <ul class="font-size-16">
+          <li>CSS size reduced</li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
       <td class="text-bold font-size-16">6.2</td>
       <td class="font-size-16">7-14-23</td>
       <td>
